# autora-theorist-Avengers

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
challenge/: theorist_benchmarking.ipynb
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/theorist/autora_theorist_avengers/: __init__.py
tests/: test_autora_theorist_avengers.py
tutorial/: 1-Start-Tutorial.md  2-Create-Virtual-Environment.md  3-Create-Template.md  4-Project-Structure.md
