[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora-theorist-Avengers"
description = "Our project"
authors = [
    { name = "Hannes Voß", email = "hannes.voss95@gmail.com" },
    { name = "Partha Pratim Kalita", email = "parthakalita142@gmail.com" },
]
dynamic = ["version"]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
    "autora",
    "autora[theorist-bms]",
    "pytest",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/parthapratimkalita/autora-theorist-Avengers"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
